tests/baselines/reference/es6ExportAll.errors.txt
client.ts(1,15): error TS2307: Cannot find module 'server' or its corresponding type declarations.


==== server.ts (0 errors) ====
    export class c {
    }
    export interface i {
    }
    export namespace m {
        export var x = 10;
    }
    export var x = 10;
    export namespace uninstantiated {
    }
    
==== client.ts (1 errors) ====
    export * from "server";
                  ~~~~~~~~
!!! error TS2307: Cannot find module 'server' or its corresponding type declarations.